--- a/index.html
+++ b/index.html
@@ -74,6 +74,69 @@
             box-shadow: 0 24px 35px rgba(67, 85, 123, 0.12);
         }
 
+        #filter-bar.is-collapsed {
+            padding-bottom: 16px;
+        }
+
+        .filter-bar__header {
+            display: flex;
+            align-items: center;
+            justify-content: space-between;
+            gap: 12px;
+            margin-bottom: 10px;
+        }
+
+        .filter-bar__header-left {
+            display: flex;
+            align-items: center;
+            gap: 10px;
+        }
+
+        .filter-bar__title {
+            margin: 0;
+            font-size: 1.05rem;
+            font-weight: 700;
+            color: var(--text-color);
+        }
+
+        .filter-bar__active-badge {
+            background: rgba(92, 107, 242, 0.18);
+            color: var(--accent-color);
+            padding: 4px 10px;
+            border-radius: 999px;
+            font-size: 0.85rem;
+            font-weight: 600;
+        }
+
+        .filter-bar__toggle {
+            display: inline-flex;
+            align-items: center;
+            gap: 6px;
+            border-radius: 999px;
+            border: 1px solid rgba(92, 107, 242, 0.25);
+            background: #fff;
+            color: var(--accent-color);
+            padding: 8px 16px;
+            font-weight: 600;
+            cursor: pointer;
+            transition: background 0.2s ease, color 0.2s ease, box-shadow 0.2s ease;
+        }
+
+        .filter-bar__toggle:hover {
+            background: rgba(92, 107, 242, 0.1);
+            box-shadow: 0 10px 22px rgba(92, 107, 242, 0.18);
+        }
+
+        .filter-bar__toggle-icon {
+            width: 18px;
+            height: 18px;
+            transition: transform 0.2s ease;
+        }
+
+        #filter-bar.is-collapsed .filter-bar__toggle-icon {
+            transform: rotate(-90deg);
+        }
+
         .filter-bar__content {
             display: flex;
             flex-direction: column;
@@ -482,6 +545,17 @@
                 border-radius: 0 0 20px 20px;
             }
 
+            .filter-bar__header {
+                flex-direction: column;
+                align-items: flex-start;
+                gap: 14px;
+            }
+
+            .filter-bar__toggle {
+                width: 100%;
+                justify-content: center;
+            }
+
             .grid-container {
                 gap: 18px;
             }
@@ -498,6 +572,10 @@
         @media (max-width: 480px) {
             .search-input {
                 flex: 1 1 100%;
+            }
+
+            .filter-bar__header {
+                align-items: stretch;
             }
 
             .clear-button {
@@ -527,8 +605,33 @@
             <div v-if="errorMessage" class="empty-state" role="alert">{{ errorMessage }}</div>
 
             <template v-else>
-                <section id="filter-bar" aria-label="篩選區塊">
-                    <div class="filter-bar__content">
+                <section
+                    id="filter-bar"
+                    aria-label="篩選區塊"
+                    :class="{ 'is-collapsed': isFilterBarCollapsed }"
+                >
+                    <div class="filter-bar__header">
+                        <div class="filter-bar__header-left">
+                            <h2 class="filter-bar__title">搜尋與篩選</h2>
+                            <span
+                                v-if="hasActiveFilters && isFilterBarCollapsed"
+                                class="filter-bar__active-badge"
+                            >已套用篩選</span>
+                        </div>
+                        <button
+                            class="filter-bar__toggle"
+                            type="button"
+                            @click="toggleFilterBar"
+                            :aria-expanded="!isFilterBarCollapsed"
+                            aria-controls="filter-bar-content"
+                        >
+                            <span>{{ filterBarToggleText }}</span>
+                            <svg viewBox="0 0 24 24" aria-hidden="true" class="filter-bar__toggle-icon">
+                                <path fill="currentColor" d="M7.41 8.59 12 13.17l4.59-4.58L18 10l-6 6-6-6z" />
+                            </svg>
+                        </button>
+                    </div>
+                    <div class="filter-bar__content" id="filter-bar-content" v-show="!isFilterBarCollapsed">
                         <div class="search-row">
                             <label class="search-input">
                                 <svg aria-hidden="true" viewBox="0 0 24 24" focusable="false">
