Adjust map button layout for small screens

--- a/index.html
+++ b/index.html
@@ -765,12 +765,24 @@
             }
 
             .map-buttons {
-                flex-direction: column;
-                align-items: flex-start;
+                flex-direction: row;
+                align-items: center;
+                gap: 12px;
             }
 
             .map-links {
-                margin-left: 0;
+                margin-left: auto;
+                gap: 10px;
+            }
+
+            .map-links a {
+                width: 36px;
+                height: 36px;
+            }
+
+            .map-logo {
+                width: 20px;
+                height: 20px;
             }
 
             .modal-nav {
