--- a/index.html
+++ b/index.html
@@ -364,6 +364,22 @@
             font-size: 1.35rem;
             font-weight: 700;
             margin: 0;
+            display: flex;
+            align-items: baseline;
+            gap: 8px;
+            flex-wrap: wrap;
+        }
+
+        .card-code {
+            display: inline-flex;
+            align-items: center;
+            justify-content: center;
+            padding: 2px 10px;
+            border-radius: 999px;
+            background: var(--surface-alt);
+            color: var(--accent-color);
+            font-size: 0.85rem;
+            font-weight: 700;
         }
 
         .card-tag {
@@ -930,7 +946,10 @@
                                 loading="lazy"
                             >
                             <div class="card-content">
-                                <h2 class="card-title">{{ restaurant.DetailShortInfo.faciltNameCN || 'N/A' }}</h2>
+                                <h2 class="card-title">
+                                    <span v-if="restaurant.Code" class="card-code">{{ restaurant.Code }}</span>
+                                    <span>{{ restaurant.DetailShortInfo.faciltNameCN || 'N/A' }}</span>
+                                </h2>
                                 <div>
                                     <span
                                         v-for="id in getFoodTypeIds(restaurant)"
