Update zone tag colors

--- a/index.html
+++ b/index.html
@@ -685,12 +685,12 @@
         }
 
         /* Tag Colors by ID */
-        .tag-id-01 { background-color: rgba(234, 84, 85, 0.15); color: #d64040; }
-        .tag-id-02 { background-color: rgba(243, 156, 18, 0.15); color: #c2760f; }
-        .tag-id-03 { background-color: rgba(76, 175, 80, 0.15); color: #2f8d33; }
+        .tag-id-01 { background-color: rgba(249, 115, 22, 0.15); color: #f97316; }
+        .tag-id-02 { background-color: rgba(37, 99, 235, 0.15); color: #2563eb; }
+        .tag-id-03 { background-color: rgba(217, 70, 239, 0.15); color: #d946ef; }
         .tag-id-04 { background-color: rgba(3, 169, 244, 0.15); color: #0c6aa5; }
-        .tag-id-05 { background-color: rgba(155, 89, 182, 0.15); color: #6d2da0; }
-        .tag-id-06 { background-color: rgba(52, 73, 94, 0.18); color: #2c3e50; }
+        .tag-id-05 { background-color: rgba(147, 51, 234, 0.15); color: #9333ea; }
+        .tag-id-06 { background-color: rgba(22, 163, 74, 0.15); color: #16a34a; }
         .tag-id-07,
         .tag-id-12 { background-color: rgba(127, 140, 141, 0.15); color: #5f6c6d; }
 
