--- a/index.html
+++ b/index.html
@@ -279,6 +279,85 @@
             box-shadow: 0 12px 24px rgba(92, 107, 242, 0.25);
         }
 
+        #zone-type-filters .filter-btn {
+            border-color: transparent;
+        }
+
+        #zone-type-filters .filter-btn.zone-01 {
+            background: rgba(249, 115, 22, 0.12);
+            color: #f97316;
+        }
+
+        #zone-type-filters .filter-btn.zone-01:hover,
+        #zone-type-filters .filter-btn.zone-01:focus-visible {
+            background: rgba(249, 115, 22, 0.18);
+        }
+
+        #zone-type-filters .filter-btn.zone-01.active {
+            background: #f97316;
+            box-shadow: 0 12px 24px rgba(249, 115, 22, 0.28);
+        }
+
+        #zone-type-filters .filter-btn.zone-02 {
+            background: rgba(37, 99, 235, 0.12);
+            color: #2563eb;
+        }
+
+        #zone-type-filters .filter-btn.zone-02:hover,
+        #zone-type-filters .filter-btn.zone-02:focus-visible {
+            background: rgba(37, 99, 235, 0.18);
+        }
+
+        #zone-type-filters .filter-btn.zone-02.active {
+            background: #2563eb;
+            box-shadow: 0 12px 24px rgba(37, 99, 235, 0.28);
+        }
+
+        #zone-type-filters .filter-btn.zone-03 {
+            background: rgba(217, 70, 239, 0.12);
+            color: #d946ef;
+        }
+
+        #zone-type-filters .filter-btn.zone-03:hover,
+        #zone-type-filters .filter-btn.zone-03:focus-visible {
+            background: rgba(217, 70, 239, 0.18);
+        }
+
+        #zone-type-filters .filter-btn.zone-03.active {
+            background: #d946ef;
+            box-shadow: 0 12px 24px rgba(217, 70, 239, 0.28);
+        }
+
+        #zone-type-filters .filter-btn.zone-05 {
+            background: rgba(147, 51, 234, 0.12);
+            color: #9333ea;
+        }
+
+        #zone-type-filters .filter-btn.zone-05:hover,
+        #zone-type-filters .filter-btn.zone-05:focus-visible {
+            background: rgba(147, 51, 234, 0.18);
+        }
+
+        #zone-type-filters .filter-btn.zone-05.active {
+            background: #9333ea;
+            box-shadow: 0 12px 24px rgba(147, 51, 234, 0.28);
+        }
+
+        #zone-type-filters .filter-btn.zone-06 {
+            background: rgba(22, 163, 74, 0.12);
+            color: #16a34a;
+        }
+
+        #zone-type-filters .filter-btn.zone-06:hover,
+        #zone-type-filters .filter-btn.zone-06:focus-visible {
+            background: rgba(22, 163, 74, 0.18);
+        }
+
+        #zone-type-filters .filter-btn.zone-06.active {
+            background: #16a34a;
+            box-shadow: 0 12px 24px rgba(22, 163, 74, 0.28);
+        }
+
         .status-row {
             display: flex;
             justify-content: space-between;
@@ -924,7 +1003,7 @@
                                 v-for="zone in zoneTypes"
                                 :key="zone.codeId"
                                 class="filter-btn"
-                                :class="{ active: isZoneFilterActive(zone.codeId) }"
+                                :class="['zone-' + zone.codeId, { active: isZoneFilterActive(zone.codeId) }]"
                                 @click="toggleZoneFilter(zone.codeId)"
                                 type="button"
                             >{{ zone.codeNameCN }}</button>
