--- a/index.html
+++ b/index.html
@@ -295,6 +295,7 @@
 
         #zone-type-filters .filter-btn.zone-01.active {
             background: #f97316;
+            color: #fff;
             box-shadow: 0 12px 24px rgba(249, 115, 22, 0.28);
         }
 
@@ -310,6 +311,7 @@
 
         #zone-type-filters .filter-btn.zone-02.active {
             background: #2563eb;
+            color: #fff;
             box-shadow: 0 12px 24px rgba(37, 99, 235, 0.28);
         }
 
@@ -325,6 +327,7 @@
 
         #zone-type-filters .filter-btn.zone-03.active {
             background: #d946ef;
+            color: #fff;
             box-shadow: 0 12px 24px rgba(217, 70, 239, 0.28);
         }
 
@@ -340,6 +343,7 @@
 
         #zone-type-filters .filter-btn.zone-05.active {
             background: #9333ea;
+            color: #fff;
             box-shadow: 0 12px 24px rgba(147, 51, 234, 0.28);
         }
 
@@ -355,6 +359,7 @@
 
         #zone-type-filters .filter-btn.zone-06.active {
             background: #16a34a;
+            color: #fff;
             box-shadow: 0 12px 24px rgba(22, 163, 74, 0.28);
         }
 
